--- a/style/assignment.css
+++ b/style/assignment.css
@@ -5,6 +5,9 @@
     font-variation-settings:
     "wdth" 100;
 }
+body{
+    background-color: #f5f5f5;
+}
 nav{
     display: flex;
     align-items: center;
@@ -27,4 +30,86 @@ nav{
     font-size: 18px;
     font-weight: 600;
     margin-right: 160px;
+}
+.hero{
+    background-color: #C6E4D6;
+    display: flex;
+    gap: 64px;
+    padding: 20px 160px 80px 160px;
+
+}
+.hero-subtitle{
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(14, 14, 14, 0.5);
+    margin-bottom: 16px;
+}
+.hero-title{
+    font-size: 56px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 1);
+    width: 622px;
+}
+.hero-btn{
+    background-color: #006A50;
+    width: 270px;
+    height: 56px;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 8px;
+    border-style: none;
+    color: white;
+}
+.pillars{
+    display: block;
+    padding: 0px 160px;
+    margin-top: 20px;
+}
+.pillars-title{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0e0e0e;
+    margin-bottom: 80px 32px;
+}
+.pillars-card{
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background-color: #ffffff;
+    padding:24px;
+    width: 100%;
+    height: 100%;
+}
+.section-title{
+    font-size: 20px;
+    color:#0e0e0e;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+.section-description{
+    font-size: 24px;
+    font-weight: 400;
+    color: #0E0E0E;
+    margin-top: 0 auto;
+}
+.p-card{
+    display: flex;
+    gap: 24px;
+    align-items: center;
+}
+.vision-card{
+    display: block;
+    background-color: rgba(84, 144, 245, 0.2);
+    width: 410px;
+    height: 325px;
+    border-radius: 16px;
+}
+.vision-btn{
+    font-size: 16px;
+    font-weight: 600;
+    background-color: #5490F5;
+    border-radius: 8px;
+    border-style: none;
+    height: 41px;
+    width: 122px;
+    color: white;
 }
