--- a/style/assignment.css
+++ b/style/assignment.css
@@ -65,7 +65,7 @@ nav{
     padding: 0px 160px;
     margin-top: 20px;
 }
-.pillars-title, .news-title {
+.pillars-title, .news-title, .donate-title {
     font-size: 40px;
     font-weight: bold;
     color: #0e0e0e;
@@ -175,7 +175,7 @@ nav{
     margin-bottom: 24px;
 }
 .news-card-2{
-margin-left: 56px;
+    margin-left: 56px;
 }
 .news-description{
     margin-bottom: 32px;
@@ -200,7 +200,7 @@ margin-left: 56px;
     color: rgba(14, 14, 14, 0.7);
     margin-bottom: 32px;
 }
-.satelite-btn{
+.satelite-btn, .donate-now-btn{
     background-color: #006A50;
     border-radius: 8px;
     border-style: none;
@@ -216,4 +216,53 @@ margin-left: 56px;
     width: 408px;
     height: 306px;
     margin: 48px;
+}
+.donate-section{
+    display:block;
+    justify-content: center;
+    text-align: center;
+}
+.donate-description{
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(14, 14, 14, 0.7);
+    padding: 24px 248px;
+    margin: 0 auto;
+
+}
+.donate-btn{
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    width: 240px;
+    height: 128px;
+    font-size: 40px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 0.8);
+}
+.donate-btn-active{
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background:rgba(198, 228, 214, 1);
+    width: 240px;
+    height: 128px;
+    font-size: 40px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 0.8);
+}
+.donation-btn{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    /* margin: 0 auto; */
+    padding: 32px 264px;
+}
+.other-amount{
+    /* height: 64px;
+    width: 1032px; */
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    padding: 32px 284px;
+    margin-bottom: 40px;
 }
