--- a/style/assignment.css
+++ b/style/assignment.css
@@ -65,7 +65,7 @@ nav{
     padding: 0px 160px;
     margin-top: 20px;
 }
-.pillars-title, .news-title, .donate-title {
+.pillars-title, .news-title, .donate-title, .newsletter-title {
     font-size: 40px;
     font-weight: bold;
     color: #0e0e0e;
@@ -96,7 +96,7 @@ nav{
     gap: 24px;
     align-items: center;
 }
-.vision-description, .news-description{
+.vision-description, .news-description, .newsletter-description{
     font-size: 16px;
     font-weight: 400;
     color: rgba(14, 14, 14, 0.7);
@@ -265,4 +265,54 @@ nav{
     text-align: center;
     padding: 32px 284px;
     margin-bottom: 40px;
+    border-style: none;
+}
+.newsletter{
+    background-color: rgba(198, 228, 214, 1);
+    padding: 80px 265px;
+    margin: 80px 160px;
+    border-radius: 24px;
+}
+.newsletter-email{
+    background-color: white;
+    width: 600px;
+    height: 55px;
+    font-size:16px;
+    font-weight: 400;
+    color: rgba(14, 14, 14, 0.3);
+    border-style: none;
+    padding-left: 40px;
+}
+.subscribe-btn{
+    background-color: #006A50;
+    padding: 17px 34px;
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    border-style: none;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+.newsletter-email-subscribe{
+    display: flex;
+    justify-content: center;
+
+}
+.newsletter-title, .newsletter-description, .newsletter-bottom-text{
+    text-align: center;
+}
+.footer-text{
+    font-size: 32px;
+    font-weight: bold;
+    color: #0e0e0e;
+    text-align: center;
+}
+.bottom-line{
+    width: 1120px;
+}
+.social-link{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin: 32px 740px;
 }
